@@ -12,6 +12,7 @@ Version 1.0.3
 * Fix rocket explosions near statics.
 * Fix TR3 monkey level crash.
 * Fix occasional ejection when landing on a slope.
+* Fix occasional ejections when climbing up on a ledge under a slope.
 * Fix slow centaur projectile velocity.
 * Fix search animations - allow chest and shelf animations to play properly.
 * Fix grabbing narrow ledges below ceilings.
